# dcodex

./: .buildinfo  .coveragerc  CNAME  README.md  admin.py  apps.py  architecture.html  core.html  dependencies.html  deployment.html  development.html  distance.py  generation.html  genindex.html  index.html  installation.html  makemigrations.py  models.py  objects.inv  pyproject.toml  requirements.txt  runtests.py  search.html  searchindex.js  setup.cfg  setup.py  strings.py  tests.py  urls.py  util.py  views.py
.doctrees/: architecture.doctree  core.doctree  dependencies.doctree  deployment.doctree  development.doctree  environment.pickle  generation.doctree  index.doctree  installation.doctree
.github/workflows/: pipeline.yml
_sources/: architecture.rst.txt  dependencies.rst.txt  deployment.rst.txt  development.rst.txt  index.rst.txt
dcodex/: __init__.py  admin.py  apps.py  distance.py  forms.py  models.py  similarity.py  strings.py  urls.py  util.py  views.py
dcodex/management/commands/: _dcodex_commands.py  accordance.py  connectdecks.py  fixalllocations.py  fixlocations.py  fixs71.py  import-dates.py  import_pdfs.py  latex.py  tei.py
dcodex/migrations/: 0001_initial.py  0002_userprofile.py  0003_auto_20190920_1333.py  0004_auto_20190927_0054.py  0005_auto_20200526_1559.py  0006_remove_group_members.py  0007_delete_membership.py  0008_auto_20200526_2053.py  0009_group.py  0010_groupmembershipbase.py  0011_groupmembershipall_groupmembershiprange.py  0012_auto_20200526_2205.py  0013_auto_20200527_2210.py  0014_delete_groupmembershiprange.py  0015_delete_groupmembershipall.py  0016_delete_groupmembershipbase.py  0017_delete_group.py  0018_delete_groupbase.py  0019_auto_20200527_2213.py  0020_affiliationbase_name.py  0021_affiliationverses.py  0022_auto_20200803_1646.py  0023_affiliationexcludeverses.py  0024_auto_20200809_1431.py  0025_auto_20200809_1536.py  0026_auto_20201004_1045.py  0027_manuscript_markup.py  0028_auto_20201004_1050.py  0029_manuscript_text_direction.py  0030_auto_20201122_2300.py  0031_auto_20201124_0944.py  0032_auto_20201126_2325.py  0033_simplearabicmarkup.py  0034_auto_20201215_0315.py  0035_auto_20210216_0331.py  0036_minimalmarkup.py  0037_nonlatinmarkup.py  0038_markup_punctuation_tokens.py  0039_nonlatinmarkup_number_tokens.py  0040_alter_versetranscriptionbase_transcription.py  (+2 more)
dcodex/models/: __init__.py  markup.py  models.py
dcodex/scripts/: all_mss_family.py  tei.py
dcodex/templates/dcodex/: base.html  base_logo.html  base_sidebars.html  comparison.html  form.html  home.html  manuscript.html  ms_hover.html  ms_images.html  table.html  thumbnails.html  transcription_mini.html
dcodex/templatetags/: dcodex_tags.py
docs/: conf.py  cookiecutter.rst  core.rst  dependencies.rst  deployment.rst  generation.rst  index.rst  installation.rst
migrations/: 0001_initial.py  0003_auto_20190920_1333.py  0004_auto_20190927_0054.py  0006_remove_group_members.py  0007_delete_membership.py  0008_auto_20200526_2053.py  0009_group.py  0010_groupmembershipbase.py  0011_groupmembershipall_groupmembershiprange.py  0013_auto_20200527_2210.py  0017_delete_group.py  0018_delete_groupbase.py  0019_auto_20200527_2213.py  0021_affiliationverses.py  0024_auto_20200809_1431.py  0025_auto_20200809_1536.py  0027_manuscript_markup.py  0028_auto_20201004_1050.py  0029_manuscript_text_direction.py
scripts/: all_rtl.py
static/dcodex/css/: comparison.css  dcodex.css  manuscript.css  sidebars.css
static/dcodex/js/: dcodex.js  manuscript-old.js  manuscript.js  sidebars.js
templates/dcodex/: approx_verse.html  base.html  base_sidebars.html  comparison.html  dataframe.html  favicon.html  fonts.html  index.html  manuscript.html  pdf_images.html  select_manuscript.html  thumbnails.html  transcription_mini.html
templatetags/: dcodex_tags.py
tests/: test_models.py  test_settings.py
(+6 files in other folders)
