[tool.poetry]
name = "dcodex"
version = "1.0.7"
description = "A software framework for manuscript analysis"
authors = ["Robert Turnbull <robert.turnbull@unimelb.edu.au>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://www.dcodex.net"
repository = "https://github.com/rbturnbull/dcodex"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
Django = "^3.2.6"
django-guardian = "^2.4.0"
django-polymorphic = "^3.0.0"
numpy = "^1.21.1"
pandas = "^1.3.1"
scipy = "^1.7.3"
matplotlib = "^3.4.2"
python-Levenshtein = "^0.12.2"
pyxDamerauLevenshtein = "^1.7.0"
beautifulsoup4 = "^4.9.3"
django-admin-sortable2 = "^1.0"
lxml = "^4.6.3"
regex = "^2021.8.3"
django-filer = "^2.0.2"
django-imagedeck = "^0.3.3"
gotoh = "^0.1.1"

[tool.poetry.dev-dependencies]
coverage = "^5.5"
black = "^21.9b0"
Sphinx = "^4.2.0"
nbsphinx = "^0.8.7"
sphinx-rtd-theme = "^1.0.0"
sphinx-autobuild = "^2021.3.14"
pre-commit = "^2.15.0"
sphinx-copybutton = "^0.4.0"

[build-system]
requires = ["setuptools >= 40.6.0", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
